# quantum-simulator

./: .gitignore  Pipfile  README.md  example.py  example_02.py  example_data.py  pyproject.toml  result.txt  setup.cfg
.github/: pull_request_template.md
.github/workflows/: pythonpackage.yml
base/: error.py  generic_circuit.py  observable.py  qubit.py  qubit_sequence.py  qubits.py
base/tests/: conftest.py  test_observable.py  test_qubit.py  test_qubits.py
docs/: .buildinfo  conf.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  quantum_simulator.base.html  quantum_simulator.channel.html  quantum_simulator.html  quantum_simulator.major.html  quantum_simulator.rst  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  quantum_simulator.base.doctree  quantum_simulator.channel.doctree  quantum_simulator.doctree  quantum_simulator.major.doctree
docs/_build/: genindex.html  index.html  objects.inv  quantum_simulator.base.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: index.rst.txt  quantum_simulator.base.rst.txt  quantum_simulator.channel.rst.txt  quantum_simulator.rst.txt
docs_src/: conf.py  index.rst  modules.rst  quantum_simulator.base.rst  quantum_simulator.channel.rst  quantum_simulator.major.rst
docssrc/: conf.py
examples/: bb84_protocol.py  experiment.py  hadamard_channel.py  quantum_teleportation.py
quantum_simulator/base/: conf.py  error.py  generic_circuit.py  observable.py  pure_qubits.py  qubits.py  switch_cupy.py  time_evolution.py  (+3 more)
tests/: conftest.py
(+98 files in other folders)
