[tool.poetry]
name = "quantum-simulator"
version = "0.1.0"
description = "Qunantum Computing Simulator by BBRFKR"
authors = ["bbrfkr <bbrfkr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.3"
typing = "^3.7.4"
cupy-cuda102 = "^7.5.0"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.4.1"
pytest-mock = "^3.1.0"
sphinx = "^3.0.3"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
