[tool.poetry]
name = "quantum-simulator"
version = "0.1.0"
description = "Qunantum Computing Simulator by BBRFKR"
authors = ["bbrfkr <bbrfkr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.18.3"

[tool.poetry.dev-dependencies]
snakeviz = "^2.1.0"
typing = "^3.7.4"
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-mock = "*"
sphinx = "^3.0.3"
sphinx_rtd_theme = "^0.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
